# Pastol

./: .gitignore  Cargo.toml  LICENSE  README.md  example.md  justfile
.github/ISSUE_TEMPLATE/: ✨-feature-request.md  🐛-bug-report.md
.github/workflows/: create-publish.yml  markdown-to-pages-action.yml  release.yml  rust-clippy.yml
src/: config_manager.rs  deserialize.rs  deserializer.rs  file_reader.rs  main.rs  petition_manager.rs  petitions.rs  serializer.rs  write_markdown.rs
