[package]
name = "pastol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }


# reqwest Linux requirements
openssl = { version = "0.10", features = ["vendored"] }
toml = "0.8"
serde_derive = "1"
serde = "1"
dirs = "5"
