[package]
name = "pastol"
version = "0.8.0"
authors = ["M1n-74316D65"]
edition = "2021"
description = "Paste.lol on the command line."
readme = "README.md"
homepage = "https://github.com/M1n-74316D65/Pastol"
repository = "https://github.com/M1n-74316D65/Pastol"
license = "MIT"
keywords = ["pastebin", "markdown", "pastelol", "cli", "filesharing"]
categories = ["command-line-utilities", "command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde_derive = "1"
serde_json = "1"
serde = "1"
dirs = "5"
rand = "0.8"
chrono = "0.4"

# reqwest Linux requirements
openssl = { version = "0.10", features = ["vendored"] }
